[gd_scene load_steps=3 format=3 uid="uid://u8tr2xmowgle"]

[ext_resource type="Script" uid="uid://028y36ufprdh" path="res://world_scenes/ship/shipChunk/shipChunk.gd" id="1_8j2mj"]
[ext_resource type="Script" uid="uid://cxonwpbfrm4jd" path="res://world_scenes/chunk/animLayer.gd" id="3_qn0j0"]

[node name="ShipChunk" type="Node2D"]
script = ExtResource("1_8j2mj")

[node name="backLayer" type="Sprite2D" parent="."]
visibility_layer = 2
z_index = -1
centered = false

[node name="mainLayer" type="Sprite2D" parent="."]
visibility_layer = 4
centered = false

[node name="animLayer" type="Sprite2D" parent="."]
visibility_layer = 4
centered = false
hframes = 3
script = ExtResource("3_qn0j0")

[node name="waterLayer" type="Sprite2D" parent="."]
visibility_layer = 16
z_index = 64
centered = false
